# Utility-convenience-for-streamlits

./: .dockerignore  .gitignore  .pylintrc  CHATSTACK_UI_UPDATE.md  CHAT_LAYOUT_UPDATE.md  CUSTOMER_DATABASE_SCHEMA_V2.md  Competition_for_new_franchaised_business_at_Busan.py  DIAGNOSIS_REPORT.md  Dockerfile  FINAL_FIX_SUMMARY.md  FINAL_UPDATES_SUMMARY.md  FINAL_UPDATE_SUMMARY.md  FINAL_VERIFICATION.md  FIXES_APPLIED.md  GITHUB_API_SETUP.md  GITHUB_PUSH_COMPLETE_GUIDE.md  GITHUB_PUSH_GUIDE.md  GITHUB_RESTORATION_GUIDE.md  GITHUB_RESTORATION_STEPS.md  GIT_COMMANDS.md  GIT_WORKFLOW_GUIDE.md  GUIDE_파일정리_및_GitHub_관리.md  JSON_PARSE_FIX.md  LAYOUT_AND_RERUN_UPDATE.md  MODULARIZATION_GUIDE.md  PRESENTATION_SUMMARY.md  PUSH_INSTRUCTIONS.md  Presentation_for_projects.py  QUICK_START_파일정리.md  README (English).md  README (Korean).md  README.md  README_CRM.md  STREAMLIT_APP_UPDATE.md  Streamlit 환경 비교 차트.html  UI_LAYOUT_UPDATE_SUMMARY.md  VIDEO_GENERATION_ALTERNATIVES.md  admin.py  admin_config.json  agents.py  (+125 more)
.streamlit/: config.toml  secrets.toml.example
PPTX 파일들/: AI CS Simulator 프로젝트 진행 현황 보고서.pptx  AI Customer Service Simulator.pptx  AI 고객 응대 시뮬레이터 프로젝트 진행 보고.html  AI_CS_Simulator_Presentation(한국어).html  AI_CS_Simulator_Presentation.pptx  AI_CS_Simulator_Presentation_Visual [자동 저장].pptx  AI_CS_Simulator_Presentation_Visual.pptx  AI_CS_Simulator_Project.pptx  GitHub & AI Portfolio Multilingual Guide.pptx  GitHub_&_AI_Portfolio_Multilingual_Guide.html
_pages/: _app_chat_page.py  _call_audio.py  _call_customer_in_call.py  _call_customer_mode.py  _call_customer_ringing.py  _call_customer_waiting.py  _call_ended.py  _call_in_call.py  _call_messages.py  _call_simulator.py  _call_transfer.py  _call_ui.py  _call_video.py  _call_waiting.py  _chat_agent_turn.py  _chat_agent_turn.py.backup  _chat_closing.py  _chat_closing.py.backup  _chat_customer_list.py  _chat_customer_message.py  _chat_customer_message.py.backup  _chat_customer_turn.py  _chat_customer_turn.py.backup  _chat_file_loader.py  _chat_history.py  _chat_history.py.backup  _chat_initial_query.py  _chat_initial_query.py.backup  _chat_messages.py  _chat_role_selection.py.backup  _chat_simulator.py  _chat_simulator_history.py  _chat_simulator_panels.py  _chat_simulator_temp.py  _chat_styles.py  _chat_transfer.py  _classes.py  _company_info.py  _content.py  _content.py.backup  (+19 more)
data/: auto_responses.json  (+10 more)
(+1073 files in other folders)
