[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-ai-coach"
version = "1.0.0"
description = "AI Study Coach & Customer Service Simulator"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["streamlit", "ai", "customer-service", "simulator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "google-generativeai>=0.3.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "groq>=0.4.0",
    "streamlit-mic-recorder>=0.0.8",
    "langchain>=0.1.0",
    "langchain-classic>=1.0.0",
    "langchain-core>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langchain-google-genai>=0.0.6",
    "langchain-nvidia-ai-endpoints>=0.0.1",
    "PyPDF2>=3.0.0",
    "pypdf>=3.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "requests>=2.31.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pylint>=2.17.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["_pages", "ui", "utils"]

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0613",  # unused-argument
]

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

